--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=send-book-email-spring-batch
 
+spring.sendgrid.api-key=${SENDGRID_API_KEY}
+
 spring.datasource.jdbcUrl=jdbc:mysql://localhost:3307/spring_batch
 spring.datasource.username=root
 spring.datasource.password=1234567
