--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ app.datasource.username=root
 app.datasource.password=1234567
 
 spring.batch.jdbc.initialize-schema=always
+
+spring.batch.job.enabled=false
